# multisource-candidate-data-transformer-data-pipeline

./: .gitignore  Design.md  README.md  docker-compose.yml  generate_abstract_pdf.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_models.py  0002_add_candidate_profile_columns.py  0003_create_projection_configs.py
backend/app/: config.py  db.py  identity.py  llm.py  main.py  normalization.py  observations.py  projection.py  schemas.py
backend/app/adapters/: __init__.py  ats_json.py  github_stub.py  recruiter_csv.py  resume_llm.py
backend/app/api/: candidates.py  configs.py  uploads.py
backend/app/models/: candidate.py
backend/app/services/: ingest.py
backend/pipeline/: __init__.py  cli.py
backend/tests/: test_adapters.py  test_api_endpoints.py  test_cli_integration.py  test_health.py  test_identity.py  test_normalization.py  test_projection.py  test_uploads_api.py
backend/tests/fixtures/: github_profile.json  recruiter_empty.csv  recruiter_sample.csv  resume_no_dates.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  index.css
input/: ats_messy.json  github_profile_messy.json  recruiter_messy.csv  resume_messy.txt
samples/configs/: default_projection.json
samples/inputs/: ats_sample.json  recruiter_sample.csv
